# hivemind-json-db-plugin

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-tests.yml  coverage.yml  publish_stable.yml  release-preview.yml  release_workflow.yml  repo-health.yml  tests.yml
docs/: README.md  api-reference.md  architecture.md  comparison.md  configuration.md  contributing.md  getting-started.md  migration.md  operations.md  troubleshooting.md
hivemind_json_database/: __init__.py  version.py
tests/: test_jsondb.py
